# tp_personal_assistant

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  notebook.json  pyproject.toml  setup.py
example_book/save/: notebook.json  phonebook.csv  phonebook.json
game/: game.py
src/: commands.py  common_functions.py  goose_game.py  main.py  memory.py  notes_core.py  open_ai_input_assistent.py  save_load_book.py  save_load_books.py  save_load_notebook.py  sorter.py
src/base_team_project/: commands.py  common_functions.py  helper.py  main.py  memory.py  memory_tests.py  notes.py  notes_core.py  save_load_book.py  save_load_notebook.py  save_load_tests.py  sorter.py
src/example_book/save/: phonebook.json
src/tests/: memory_tests.py  save_load_tests.py
tests/: main_tests.py  memory_tests.py  notes_core_tests.py  save_load_tests.py
